# dbt-exasol

./: .envrc  .gitignore  .import_linter_config  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  WORKING.md  devbox.json  mise.toml  noxconfig.py  noxfile.py  phase-1.10-phase1.md  phase-1.10-phase2.md  phase-1.10.md  pyproject.toml  pytest.ini  review_glm.md  sonar-project.properties  spec_nox_test.md  test.env  tox.ini  uv.md
.github/workflows/: ci.yml  dbt-exasol-cicd.yml  integration.yml  release.yml
dbt/: __init__.py
dbt/adapters/: __init__.py
dbt/adapters/exasol/: __init__.py  __version__.py  column.py  connections.py  impl.py  relation.py  version.py
dbt/include/: __init__.py
dbt/include/exasol/: __init__.py
dbt/include/exasol/macros/: adapters.sql  apply_grants.sql  catalog.sql  get_catalog_for_single_relation.sql  metadata.sql  validate_sql.sql
openspec/: issues.md  project.md
openspec/archive/: phase-1.10-phase1.md  phase-1.10-phase2.md  phase-1.10-phase3.md  phase-1.10.md
openspec/changes/add-dbt-111-parity/: design.md  proposal.md  tasks.md
openspec/changes/add-github-actions-cicd/: design.md  proposal.md  tasks.md
openspec/changes/add-internal-function-unit-tests/: tasks.md
openspec/changes/add-udf-function-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-21-add-relation-unit-tests/: proposal.md  tasks.md
openspec/changes/archive/2026-01-21-fix-code-quality-issues/: proposal.md  tasks.md
openspec/changes/archive/2026-01-21-fix-quoting-regression-72/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-add-internal-function-unit-tests/: proposal.md  tasks.md
openspec/changes/archive/2026-01-26-add-github-actions-cicd/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-03-replace-devbox-with-mise/: tasks.md
openspec/changes/archive/2026-02-04-fix-sonar-lint-findings/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-04-refactor-build-tooling/: proposal.md  tasks.md
openspec/changes/archive/2026-02-05-add-connection-pooling/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-14-update-relation-rename-replace/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-06-update-connection-pool-multi-slot/: design.md  tasks.md
openspec/changes/archive/2026-04-23-atomic-ctas/: atomic-ctas-summary.html  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-20-upgrade-dbt-core-1.11-compat/: proposal.md  tasks.md
openspec/changes/archive/2026-06-02-add-udf-function-support/: proposal.md  tasks.md
openspec/changes/archive/2026-06-02-fix-udf-correctness-and-cleanup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-dbt-111-parity/: design.md  proposal.md  spike-notes.md  tasks.md
openspec/changes/archive/2026-06-04-fix-pooled-connection-thread-binding/: design.md  proposal.md  tasks.md
openspec/changes/atomic-ctas/: tasks.md
openspec/changes/fix-code-quality-issues/: tasks.md
openspec/changes/fix-quoting-regression-72/: tasks.md
openspec/changes/replace-devbox-with-mise/: proposal.md  tasks.md
openspec/changes/support-dbt-core-v1-12/: design.md  proposal.md  tasks.md
openspec/changes/update-connection-pool-multi-slot/: proposal.md  tasks.md
openspec/specs/atomic-ctas/: spec.md
openspec/specs/cicd/: spec.md
openspec/specs/connection-pooling/: spec.md
openspec/specs/development-environment/: spec.md
openspec/specs/quality/: spec.md
openspec/specs/quoting/: spec.md
openspec/specs/relation-management/: spec.md
openspec/specs/udf-functions/: spec.md
scripts/: podman-setup.sh  tunnel.sh
scripts/spikes/: microbatch_concurrency.py
src/dbt/adapters/exasol/: __init__.py  column.py  connections.py  impl.py  relation.py
tests/: conftest.py
tests/fixtures/deprecation_audit/: dbt_project.yml  profiles.yml
tests/fixtures/deprecation_audit/models/: audit_model.sql  sources.yml
tests/fixtures/deprecation_audit/snapshots/: audit_snapshot.sql
tests/functional/: conftest.py  test_issues.py  test_view_comment.py
tests/functional/adapter/: expected_catalog.py  test_basic.py  test_connection_pool_integration.py  test_docs_generate.py  test_failing_test.py  test_get_relation_last_modified.py  test_quoting.py  test_thread_unbound_connection.py
tests/functional/adapter/aliases/: test_aliases.py
tests/functional/adapter/catalog_integrations/: test_catalog_integration.py
tests/functional/adapter/concurrency/: test_concurrency.py
tests/functional/adapter/constraints/: fixtures.py  test_constraints.py
tests/functional/adapter/dbt_clone/: test_clone.py
tests/functional/adapter/debug/: test_dbt_debug.py
tests/functional/adapter/empty/: test_empty.py
tests/functional/adapter/ephemeral/: test_ephemeral.py
tests/functional/adapter/functions/: test_udafs.py  test_udfs.py
tests/functional/adapter/grants/: test_grants.py
tests/functional/adapter/incremental/: test_incremental_microbatch.py  test_incremental_predicates.py  test_incremental_run_result.py  test_sample_mode.py
tests/functional/adapter/limit/: fixtures.py  test_limit.py
tests/functional/adapter/persist_docs/: test_persist_docs.py
tests/functional/adapter/relations/: test_single_relation_catalog.py
tests/functional/adapter/sample_mode/: test_sample_mode.py
tests/functional/adapter/simple_copy/: test_simple_copy.py
tests/functional/adapter/simple_seed/: test_seed_keywords.py  test_simple_seed.py  test_simple_seed_override.py
tests/functional/adapter/simple_snapshot/: test_simple_snapshot.py  test_snapshot_composite_key.py  test_snapshot_hard_deletes.py  test_snapshot_reserved_keywords.py  test_snapshot_valid_to_current.py  test_upstream_hard_deletes.py  test_upstream_valid_to_current.py
tests/functional/adapter/store_test_failures_tests/: test_store_test_failures.py
tests/functional/artifacts/: test_override.py
tests/unit/: test_column.py  test_connection_pool.py  test_connections.py  test_impl.py  test_macro_create_table_as.py  test_macro_get_select_subquery.py  test_relation_quoting.py
(+54 files in other folders)
