[project]
name = "dbt-exasol"
version = "1.10.1"
description = "Adapter to dbt-core for warehouse Exasol"
authors = [
  { name = "Torsten Glunde", email = "torsten.glunde@alligator-company.com" },
  { name = "Ilija Kutle", email = "ilija.kutle@alligator-company.com" },
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
  "pyexasol>=1.0.0",
  "pyyaml==6.0.1",
  "protobuf>=5.0,<7.0",
  "dbt-adapters>=1.10.0",
  "dbt-core>=1.10.0",
]

[project.urls]
Homepage = "https://alligatorcompany.gitlab.io/dbt-exasol"
Repository = "https://github.com/tglunde/dbt-exasol"

[project.optional-dependencies]
dev = [
  "black>=22.8,<25.0",
  "dbt-tests-adapter>=1.10.0",
  "exasol-integration-test-docker-environment>=4.3.0",
  "exasol-toolbox>=4.0.0",
  "exceptiongroup>=1.1.1",
  "ipykernel>=6.25.0",
  "nox>=2024.4.15",
  "pylint>=2.15.8",
  "pytest>=7.2.0",
  "pytest-dotenv>=0.5.2",
  "pytest-parallel>=0.1.1",
  "pytest-xdist>=3.3.1",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.8",
  "sqlfluff>=2.3,<4.0",
  "tox>=4.30.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbt"]

[dependency-groups]
dev = ["tox-uv>=1.28.1"]

[tool.coverage.run]
relative_files = true
source = ["dbt/adapters/exasol", "dbt/include/exasol"]
omit = [
  "*/site-packages/*",
  "dbt/version.py",
  "dbt/__init__.py",
  "dbt/adapters/__init__.py",
  "dbt/include/__init__.py",
]

[tool.coverage.report]
fail_under = 47

[tool.black]
line-length = 120
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
  "E",  # Syntax errors
  "F",  # Pyflakes rules (excluding F401)
  "UP", # pyupgrade rules
  "D",  # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[[tool.mypy.overrides]]
module = ["test.*"]
ignore_errors = true

[tool.sonar]
projectKey = "com.exasol:dbt-exasol"
host.url = "https://sonarcloud.io"
organization = "exasol"
