[project]
name = "dbt-exasol"
version = "1.10.2"
description = "Adapter to dbt-core for warehouse Exasol"
authors = [
  { name = "Torsten Glunde", email = "torsten.glunde@alligator-company.com" },
  { name = "Ilija Kutle", email = "ilija.kutle@alligator-company.com" },
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
  "pyexasol>=1.0.0",
  "protobuf>=5.0,<7.0",
  "dbt-adapters>=1.10.0",
  "dbt-core>=1.10.0",
]

[project.urls]
Homepage = "https://alligatorcompany.gitlab.io/dbt-exasol"
Repository = "https://github.com/tglunde/dbt-exasol"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbt"]

[dependency-groups]
dev = [
  "black>=22.8,<25.0",
  "dbt-tests-adapter>=1.10.0",
  "exasol-integration-test-docker-environment>=4.3.0",
  "exasol-toolbox>=5.1.0",
  "exceptiongroup>=1.1.1",
  "freezegun>=1.2.2",
  "ipykernel>=6.25.0",
  "nox>=2024.4.15",
  "poetry>=2.3.1",
  "pylint>=2.15.8",
  "pytest-cov>=4.0.0",
  "pytest-dotenv>=0.5.2",
  "pytest-parallel>=0.1.1",
  "pytest-xdist>=3.3.1",
  "pytest>=9.0.2",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.8",
  "sqlfluff>=3.5.0",
  "tox-uv>=1.28.1",
  "tox>=4.30.3",
]

[tool.coverage.run]
# Use "dbt" as the source directory so coverage XML generates paths like
# "adapters/exasol/column.py" which SonarCloud can match when --sonar-sources=dbt
source = ["dbt"]
relative_files = true
omit = [
  "*/site-packages/*",
  "dbt/__init__.py",
  "dbt/adapters/__init__.py",
  "dbt/adapters/exasol/__init__.py",
  "dbt/adapters/exasol/__version__.py",
  "dbt/adapters/exasol/version.py",
  "dbt/include/__init__.py",
  "dbt/include/exasol/__init__.py",
]

[tool.coverage.report]
fail_under = 47
omit = ["*/__init__.py", "*/__version__.py", "*/version.py"]

[tool.coverage.xml]
output = "ci-coverage.xml"

# Path remapping for combining coverage from different machines (CI runners)
# The first path in each list is the canonical relative path used in reports
# Subsequent paths are patterns that may appear in .coverage files from CI
[tool.coverage.paths]
source = [
  "dbt/",
  # GitHub Actions runner paths
  "/home/runner/work/dbt-exasol/dbt-exasol/dbt/",
  "/home/runner/work/*/dbt/",
  # Generic patterns for other CI environments
  "*/dbt-exasol/dbt/",
]

[tool.black]
line-length = 120
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 120
max-module-lines = 800

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
# Ruff format automatically removes trailing whitespace by default
# NOTE: Project currently uses black for formatting (via nox format:check/fix)
# This configuration is for potential future migration to ruff format
# To use: run `ruff format` instead of `black`
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # Pyflakes (bugs, undefined names)
  # Note: "I" (isort) is NOT selected because project uses standalone isort in nox sessions
]
ignore = []
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Exclude F841 (unused variable) and E501 (line too long) for test files
"tests/**/*.py" = ["F841", "E501", "F405", "W291", "W293"]

[tool.ruff.lint.isort]
# Import sorting is handled by standalone isort (via nox format:check/fix)
# Ruff's isort implementation differs slightly from standalone isort with black profile
# in how it groups 'from X import Y' statements, so ruff's "I" rules are disabled above.
# This configuration is kept for potential future migration to ruff-only workflow.
known-first-party = ["dbt"]
lines-after-imports = 2
split-on-trailing-comma = true

[tool.mypy]
warn_unused_ignores = false
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["agate", "agate.*", "dateutil", "dateutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dbt.adapters.exasol.*"]
warn_return_any = false
ignore_errors = false

# Sonar configuration is in sonar-project.properties
